--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
       integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU"
       crossorigin="anonymous"
     />
+    <!-- Google Font CDN -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@300;500;600&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- Fontawesome CDN -->
     <link
@@ -29,7 +36,7 @@
     <header>
       <section id="navbar">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-          <div class="container">
+          <div class="container navbar-container-custom">
             <a class="navbar-brand" href="#">Navbar</a>
             <button
               class="navbar-toggler"
@@ -42,7 +49,10 @@
             >
               <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
+            <div
+              class="collapse navbar-collapse justify-content-end"
+              id="navbarNav"
+            >
               <ul class="navbar-nav">
                 <li class="nav-item">
                   <a class="nav-link active" aria-current="page" href="#"
@@ -62,17 +72,18 @@
       </section>
     </header>
 
-    <section id="landing" class="landing">
-      <h1>Landing page</h1>
+    <section id="heroSection" class="heroSection">
+      <div class="hero">
+        <img src="./assets/img/hero_section.jpeg" alt="" />
+      </div>
     </section>
     <section id="productos" class="productos">
       <h2>Listado de productos</h2>
-      <h3>Desayunos:</h3>
-      <div id="desayunos"></div>
-      <h3>Almuerzos:</h3>
-      <div id="almuerzos"></div>
+      <h3 class="productos__head">Desayunos:</h3>
+      <div id="desayunos" class="productos__agrupacion"></div>
+      <h3 class="productos__head">Almuerzos:</h3>
+      <div id="almuerzos" class="productos__agrupacion"></div>
     </section>
-    <p class="prueba">0</p>
   </body>
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
