--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
       rel="stylesheet"
     />
 
+    <link
+      href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+
     <!-- Fontawesome CDN -->
     <link
       rel="stylesheet"
@@ -33,9 +38,9 @@
     <title>Lima Bakery</title>
   </head>
   <body>
-    <header class="sticky-top">
+    <header class="">
       <section id="navbar ">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-lg navbar-dark colorNav">
           <div class="container navbar-container-custom">
             <a class="navbar-brand" href="#">Navbar</a>
             <button
@@ -55,15 +60,13 @@
             >
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#"
-                    >Home</a
-                  >
+                  <a class="nav-link" aria-current="page" href="#">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Features</a>
+                  <a class="nav-link" aria-current="page" href="#">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Pricing</a>
+                  <a class="nav-link" aria-current="page" href="#">Home</a>
                 </li>
               </ul>
             </div>
@@ -74,58 +77,41 @@
 
     <section id="heroSection" class="heroSection">
       <div class="hero">
-        <div class="container">
+        <div>
           <img src="./assets/img/hero_section.jpeg" alt="" />
         </div>
       </div>
     </section>
     <section id="productos" class="productos container">
-      <div class="container col-custom">
-        <div class="row">
-          <div class="col-lg-4">
-            <div class="card bg-dark text-white">
-              <img src="..." class="card-img" alt="..." />
-              <div class="card-img-overlay">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">
-                  This is a wider card with supporting text below as a natural
-                  lead-in to additional content. This content is a little bit
-                  longer.
-                </p>
-                <p class="card-text">Last updated 3 mins ago</p>
+      <div class="seccion-productos">
+        <div class="container col-custom">
+          <div class="row">
+            <div class="col-lg-4 card-product-custom">
+              <div id="desayuno" class="card bg-dark text-white">
+                <h5 class="card-title d-flex justify-content-center">
+                  Desayuno
+                </h5>
               </div>
             </div>
-          </div>
-          <div class="col-lg-4">
-            <div class="card bg-dark text-white">
-              <img src="..." class="card-img" alt="..." />
-              <div class="card-img-overlay">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">
-                  This is a wider card with supporting text below as a natural
-                  lead-in to additional content. This content is a little bit
-                  longer.
-                </p>
-                <p class="card-text">Last updated 3 mins ago</p>
+            <div class="col-lg-4 card-product-custom">
+              <div id="almuerzo" class="card bg-dark text-white">
+                <h5 class="card-title d-flex justify-content-center">
+                  Almuerzo
+                </h5>
               </div>
             </div>
-          </div>
-          <div class="col-lg-4">
-            <div class="card bg-dark text-white">
-              <img src="..." class="card-img" alt="..." />
-              <div class="card-img-overlay">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">
-                  This is a wider card with supporting text below as a natural
-                  lead-in to additional content. This content is a little bit
-                  longer.
-                </p>
-                <p class="card-text">Last updated 3 mins ago</p>
+            <div class="col-lg-4 card-product-custom">
+              <div id="cena" class="card bg-dark text-white">
+                <h5 class="card-title d-flex justify-content-center">Cena</h5>
               </div>
             </div>
           </div>
         </div>
       </div>
+    </section>
+
+    <section id="nosotros" class="nosotros">
+      <div style="height: 20vh"></div>
     </section>
   </body>
   <script
