--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
     <section id="heroSection" class="heroSection">
       <div class="hero">
-        <div>
+        <div class="container">
           <img src="./assets/img/hero_section.jpeg" alt="" />
         </div>
       </div>
@@ -114,11 +114,21 @@
       <div style="height: 20vh"></div>
     </section>
   </body>
+
+  <!-- Jquery CDN -->
+  <script
+    src="https://code.jquery.com/jquery-3.6.0.js"
+    integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
+    crossorigin="anonymous"
+  ></script>
+
+  <!-- Bootstrap CDN -->
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
     crossorigin="anonymous"
   ></script>
 
+  <!-- Custom JS -->
   <script src="/cardElements.js"></script>
 </html>
