Entrega proyecto final 4

--- a/index.html
+++ b/index.html
@@ -87,10 +87,8 @@
         <div class="container col-custom">
           <div class="row">
             <div class="col-lg-4 card-product-custom">
-              <div id="desayuno" class="card bg-dark text-white">
-                <h5 class="card-title d-flex justify-content-center">
-                  Desayuno
-                </h5>
+              <div id="desayuno" class="card text-white">
+                <a class="desayunoBackground"> Desayuno </a>
               </div>
             </div>
             <div class="col-lg-4 card-product-custom">
