--- a/index.html
+++ b/index.html
@@ -63,10 +63,20 @@
                   <a class="nav-link" aria-current="page" href="#">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" aria-current="page" href="#">Home</a>
+                  <a class="nav-link" aria-current="page" href="#">Nosotros</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" aria-current="page" href="#">Home</a>
+                  <a
+                    id="cart-navBar"
+                    class="nav-link"
+                    aria-current="page"
+                    href="#"
+                    >Cart<i id="cart-icon" class="fas fa-shopping-cart">
+                      <div class="cart-count-circle">
+                        <div id="cart-count" class="cart-count">0</div>
+                      </div>
+                    </i>
+                  </a>
                 </li>
               </ul>
             </div>
@@ -87,19 +97,17 @@
         <div class="container col-custom">
           <div class="row">
             <div class="col-lg-4 card-product-custom">
-              <div id="desayuno" class="card text-white">
-                <a class="desayunoBackground"> Desayuno </a>
+              <div class="card text-white p-0">
+                <a id="desayuno" class="productoBackground"> Desayuno </a>
               </div>
             </div>
             <div class="col-lg-4 card-product-custom">
-              <div id="almuerzo" class="card bg-dark text-white">
-                <h5 class="card-title d-flex justify-content-center">
-                  Almuerzo
-                </h5>
+              <div class="card text-white p-0">
+                <a id="almuerzo" class="productoBackground"> Almuerzo </a>
               </div>
             </div>
             <div class="col-lg-4 card-product-custom">
-              <div id="cena" class="card bg-dark text-white">
+              <div class="card text-white p-0">
                 <h5 class="card-title d-flex justify-content-center">Cena</h5>
               </div>
             </div>
@@ -111,6 +119,143 @@
     <section id="nosotros" class="nosotros">
       <div style="height: 20vh"></div>
     </section>
+
+    <footer>
+      <!-- Remove the container if you want to extend the Footer to full width. -->
+      <div class="container my-5">
+        <!-- Footer -->
+        <footer class="text-center text-lg-start">
+          <!-- Grid container -->
+          <div class="container p-4 pb-0">
+            <!-- Section: Links -->
+            <section class="">
+              <!--Grid row-->
+              <div class="row">
+                <!-- Grid column -->
+                <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
+                  <h6 class="text-uppercase mb-4 font-weight-bold">
+                    Lima Bakery
+                  </h6>
+                  <p>Date un gusto</p>
+                </div>
+                <!-- Grid column -->
+
+                <hr class="w-100 clearfix d-md-none" />
+
+                <!-- Grid column -->
+                <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
+                  <h6 class="text-uppercase mb-4 font-weight-bold">Products</h6>
+                  <p>
+                    <a>Home</a>
+                  </p>
+                  <p>
+                    <a>Nuestra Carta</a>
+                  </p>
+                  <p>
+                    <a>Nosotros</a>
+                  </p>
+                  <p>
+                    <a>Contactanos</a>
+                  </p>
+                </div>
+                <!-- Grid column -->
+
+                <hr class="w-100 clearfix d-md-none" />
+
+                <!-- Grid column -->
+                <hr class="w-100 clearfix d-md-none" />
+
+                <!-- Grid column -->
+                <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
+                  <h6 class="text-uppercase mb-4 font-weight-bold">Contact</h6>
+                  <p><i class="fas fa-home mr-3"></i> Lima - Peru</p>
+                  <p><i class="fas fa-envelope mr-3"></i> info@gmail.com</p>
+                  <p><i class="fas fa-phone mr-3"></i> + 01 234 567 88</p>
+                </div>
+                <!-- Grid column -->
+
+                <!-- Grid column -->
+                <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
+                  <h6 class="text-uppercase mb-4 font-weight-bold">
+                    Follow us
+                  </h6>
+
+                  <!-- Facebook -->
+                  <a
+                    class="btn btn-primary btn-floating m-1"
+                    style="background-color: #3b5998"
+                    href="#!"
+                    role="button"
+                    ><i class="fab fa-facebook-f"></i
+                  ></a>
+
+                  <!-- Twitter -->
+                  <a
+                    class="btn btn-primary btn-floating m-1"
+                    style="background-color: #55acee"
+                    href="#!"
+                    role="button"
+                    ><i class="fab fa-twitter"></i
+                  ></a>
+
+                  <!-- Google -->
+                  <a
+                    class="btn btn-primary btn-floating m-1"
+                    style="background-color: #dd4b39"
+                    href="#!"
+                    role="button"
+                    ><i class="fab fa-google"></i
+                  ></a>
+
+                  <!-- Instagram -->
+                  <a
+                    class="btn btn-primary btn-floating m-1"
+                    style="background-color: #ac2bac"
+                    href="#!"
+                    role="button"
+                    ><i class="fab fa-instagram"></i
+                  ></a>
+
+                  <!-- Linkedin -->
+                  <a
+                    class="btn btn-primary btn-floating m-1"
+                    style="background-color: #0082ca"
+                    href="#!"
+                    role="button"
+                    ><i class="fab fa-linkedin-in"></i
+                  ></a>
+                  <!-- Github -->
+                  <a
+                    class="btn btn-primary btn-floating m-1"
+                    style="background-color: #333333"
+                    href="#!"
+                    role="button"
+                    ><i class="fab fa-github"></i
+                  ></a>
+                </div>
+              </div>
+              <!--Grid row-->
+            </section>
+            <!-- Section: Links -->
+          </div>
+          <!-- Grid container -->
+
+          <!-- Copyright -->
+          <div
+            class="text-center p-3"
+            style="background-color: rgba(0, 0, 0, 0.2)"
+          >
+            © 2021 Copyright:
+            <a class="text-white" href="https://github.com/Bayzon88/"
+              >Alvaro Beltran</a
+            >
+          </div>
+          <!-- Copyright -->
+        </footer>
+        <!-- Footer -->
+      </div>
+      <!-- End of .container -->
+    </footer>
   </body>
 
   <!-- Jquery CDN -->
