--- a/index.html
+++ b/index.html
@@ -42,7 +42,11 @@
       <section id="navbar ">
         <nav class="navbar navbar-expand-lg navbar-dark colorNav">
           <div class="container navbar-container-custom">
-            <a class="navbar-brand" href="#">Navbar</a>
+            <a class="navbar-brand" href="#"
+              ><img src="./assets/img/logo.png" alt="logo" class="logo" />Lima
+              Bakery</a
+            >
+
             <button
               class="navbar-toggler"
               type="button"
@@ -70,8 +74,11 @@
                     id="cart-navBar"
                     class="nav-link"
                     aria-current="page"
+                    data-bs-toggle="offcanvas"
+                    data-bs-target="#offcanvasRight"
                     href="#"
-                    >Cart<i id="cart-icon" class="fas fa-shopping-cart">
+                    >Cart
+                    <i id="cart-icon" class="fas fa-shopping-cart">
                       <div class="cart-count-circle">
                         <div id="cart-count" class="cart-count">0</div>
                       </div>
@@ -108,7 +115,7 @@
             </div>
             <div class="col-lg-4 card-product-custom">
               <div class="card text-white p-0">
-                <h5 class="card-title d-flex justify-content-center">Cena</h5>
+                <a id="cena" class="productoBackground"> cena </a>
               </div>
             </div>
           </div>
@@ -118,6 +125,28 @@
 
     <section id="nosotros" class="nosotros">
       <div style="height: 20vh"></div>
+    </section>
+
+    <!-- Shopping cart detail (Offcanvas) -->
+    <section class="shopping-cart">
+      <div id="shopping-cart">
+        <div
+          class="offcanvas offcanvas-end"
+          tabindex="-1"
+          id="offcanvasRight"
+          aria-labelledby="offcanvasRightLabel"
+        >
+          <div class="offcanvas-header d-block">
+            <button
+              type="button"
+              class="btn-close text-reset justify-content-end"
+              data-bs-dismiss="offcanvas"
+              aria-label="Close"
+            ></button>
+            <h5 class="shoppingCart" id="offcanvasRightLabel">Shopping Cart</h5>
+          </div>
+        </div>
+      </div>
     </section>
 
     <footer>
@@ -275,3 +304,12 @@
   <!-- Custom JS -->
   <script src="/cardElements.js"></script>
 </html>
+
+<!-- <div class="shopping-cart__item">
+  <h5>Nombre producto</h5>
+  <div class="d-flex">
+    <img src="" alt="imagen del producto" width="1rem" height="1rem" />
+    <h3>Cantidad producto</h3>
+    <button type="button">Quitar</button>
+  </div>
+</div> -->
