trabajo final javascript

--- a/index.html
+++ b/index.html
@@ -103,19 +103,22 @@
       <div class="seccion-productos">
         <div class="container col-custom">
           <div class="row">
-            <div class="col-lg-4 card-product-custom">
-              <div class="card text-white p-0">
-                <a id="desayuno" class="productoBackground"> Desayuno </a>
+            <div class="col-lg-4">
+              <h2 class="text-center">Desayuno</h2>
+              <div class="card p-0 card-product-custom card-custom">
+                <a id="desayuno" class="productoBackground"> </a>
               </div>
             </div>
-            <div class="col-lg-4 card-product-custom">
-              <div class="card text-white p-0">
-                <a id="almuerzo" class="productoBackground"> Almuerzo </a>
+            <div class="col-lg-4">
+              <h2 class="text-center">Almuerzo</h2>
+              <div class="card text-white p-0 card-product-custom card-custom">
+                <a id="almuerzo" class="productoBackground"> </a>
               </div>
             </div>
-            <div class="col-lg-4 card-product-custom">
-              <div class="card text-white p-0">
-                <a id="cena" class="productoBackground"> cena </a>
+            <div class="col-lg-4">
+              <h2 class="text-center">Cena</h2>
+              <div class="card text-white p-0 card-product-custom card-custom">
+                <a id="cena" class="productoBackground"> </a>
               </div>
             </div>
           </div>
