shopping cart muestra informacion y calcula precio total por item

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
     <!-- Shopping cart detail (Offcanvas) -->
     <section class="shopping-cart">
-      <div id="shopping-cart">
+      <div class="shopping-cart" id="shopping-cart">
         <div
           class="offcanvas offcanvas-end"
           tabindex="-1"
