--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@
                   <a class="nav-link" aria-current="page" href="#">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" aria-current="page" href="#">Nosotros</a>
+                  <a class="nav-link" aria-current="page" href="#nosotros"
+                    >Nosotros</a
+                  >
                 </li>
                 <li class="nav-item">
                   <a
@@ -105,7 +107,7 @@
           <div class="row">
             <div class="col-lg-4">
               <h2 class="text-center">Desayuno</h2>
-              <div class="card p-0 card-product-custom card-custom">
+              <div class="card p-0 card-product-custom card-custom btn-outline-success">
                 <a id="desayuno" class="productoBackground"> </a>
               </div>
             </div>
@@ -140,18 +142,41 @@
           aria-labelledby="offcanvasRightLabel"
         >
           <div class="offcanvas-header d-block">
-            <button
-              type="button"
-              class="btn-close text-reset justify-content-end"
-              data-bs-dismiss="offcanvas"
-              aria-label="Close"
-            ></button>
-            <h5 class="shoppingCart" id="offcanvasRightLabel">Shopping Cart</h5>
+            <div class="d-flex justify-content-between align-items-center">
+              <h5 class="shoppingCart" id="offcanvasRightLabel">
+                Shopping Cart
+              </h5>
+              <button
+                type="button"
+                class="btn-close text-reset justify-content-end"
+                data-bs-dismiss="offcanvas"
+                aria-label="Close"
+              ></button>
+            </div>
+          </div>
+          <div id="total-shopping-cart" class="total-shopping-cart">
+            <h3>Total a pagar</h3>
+            <div class="total-to-pay">
+              <h3>S/.</h3>
+              <h3 id="total-to-pay">0</h3>
+            </div>
           </div>
         </div>
       </div>
     </section>
-
+    <section id="nosotros" class="nosotros">
+      <div class="container d-flex align-items-center">
+        <img src="/assets/img/Nosotros.jpeg" alt="foto nosotros" />
+        <div>
+          <h2 style="text-align: center; font-weight: bold;">Nosotros</h2>
+          <h4 style="text-align: center; padding: 3%">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis vel
+            animi quod quisquam, autem consequuntur aut ipsum quas, a ullam
+            aliquid sint expedita amet eligendi?
+          </h2>
+        </div>
+      </div>
+    </section>
     <footer>
       <!-- Remove the container if you want to extend the Footer to full width. -->
       <div class="container my-5">
