--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
   ></script>
 
   <!-- Custom JS -->
-  <script src="/cardElements.js"></script>
+  <script src="/JSProyectoFinal/cardElements.js"></script>
 </html>
 
 <!-- <div class="shopping-cart__item">
