--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
     </section>
     <section id="nosotros" class="nosotros">
       <div class="container d-flex align-items-center">
-        <img src="/assets/img/Nosotros.jpeg" alt="foto nosotros" />
+        <img src="/JSProyectoFinal/assets/img/Nosotros.jpeg" alt="foto nosotros" />
         <div>
           <h2 style="text-align: center; font-weight: bold;">Nosotros</h2>
           <h4 style="text-align: center; padding: 3%">
