--- a/index.html
+++ b/index.html
@@ -108,19 +108,19 @@
             <div class="col-lg-4">
               <h2 class="text-center">Desayuno</h2>
               <div class="card p-0 card-product-custom card-custom btn-outline-success">
-                <a id="desayuno" class="productoBackground"> </a>
+                <a id="desayuno" class="productoBackground desayuno"> </a>
               </div>
             </div>
             <div class="col-lg-4">
               <h2 class="text-center">Almuerzo</h2>
               <div class="card text-white p-0 card-product-custom card-custom">
-                <a id="almuerzo" class="productoBackground"> </a>
+                <a id="almuerzo" class="productoBackground almuerzo"> </a>
               </div>
             </div>
             <div class="col-lg-4">
               <h2 class="text-center">Cena</h2>
               <div class="card text-white p-0 card-product-custom card-custom">
-                <a id="cena" class="productoBackground"> </a>
+                <a id="cena" class="productoBackground cena"> </a>
               </div>
             </div>
           </div>
